Astroporfolio/deploy/kubernetes/manespacePortfolio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: portfoliojorge
  labels:
    name: portfoliojorge
