Astroporfolio/deploy/kubernetes/pod-portfolio.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-astroporfolio
  namespace: namespace-astroporfolio 
  labels:
    app: astroporfolio 
spec:
  containers:
    - name: astroporfolio
      image: jorgeas/astroporfolio:latest 
      imagePullPolicy: Always
      ports:
        - containerPort: 80
