Astroporfolio/deploy/kubernetes/ingress-portfolio.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-astroporfolio
  namespace: miportfolio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  
  ingressClassName: public 
  rules:
    - host: www.jorgedesarrollador.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-astroporfolio
                port:
                  number: 80
